<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World!</string>
    <string name="input_weight">Enter weight</string>
    <string name="input_height">Enter height</string>
    <string name="input_body_fat">Enter body fat</string>
    <string name="input_age">Enter age</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
</resources>
