<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/activity_my">

    <EditText
        android:id="@+id/input_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_height"/>

    <EditText
        android:id="@+id/input_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_age"/>

    <EditText
        android:id="@+id/input_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_weight"/>

    <EditText
        android:id="@+id/input_body_fat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_body_fat"/>

    <EditText
        android:id="@+id/input_goal_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_weight"/>

    <EditText
        android:id="@+id/input_goal_body_fat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_body_fat"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendInfo"/>
</LinearLayout>
